--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "rust-wiiu.github.com",
-  "version": "1.0.0",
+  "devDependencies": {
+    "@tailwindcss/cli": "^4.1.11",
+    "bun-plugin-tailwind": "^0.0.15",
+    "daisyui": "^5.0.46",
+    "tailwindcss": "^4.1.11"
+  },
+  "name": "glsl-compiler-frontend",
+  "peerDependencies": {
+    "typescript": "^5"
+  },
   "private": true,
   "scripts": {
-    "build": "rspress build",
-    "dev": "rspress dev",
-    "preview": "rspress preview"
+    "dev": "bun ./src/index.html --console",
+    "build": "bun run build.js"
   },
-  "dependencies": {
-    "rspress": "^1.40.2",
-    "rspress-plugin-sitemap": "^1.1.2"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.17"
-  }
+  "type": "module",
+  "trustedDependencies": [],
+  "dependencies": {}
 }
