--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,28 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    // Environment setup & latest features
     "lib": [
-      "DOM",
-      "ES2020"
+      "ESNext"
     ],
-    "module": "ESNext",
+    "target": "ESNext",
+    "module": "Preserve",
+    "moduleDetection": "force",
     "jsx": "react-jsx",
+    "allowJs": true,
+    // Bundler mode
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": true,
     "noEmit": true,
+    // Best practices
     "strict": true,
     "skipLibCheck": true,
-    "isolatedModules": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "bundler",
-    "useDefineForClassFields": true,
-    "allowImportingTsExtensions": true
-  },
-  "include": [
-    "docs",
-    "theme",
-    "rspress.config.ts"
-  ],
-  "mdx": {
-    "checkMdx": true
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    // Some stricter flags (disabled by default)
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noPropertyAccessFromIndexSignature": false
   }
 }
