--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -21,10 +21,7 @@ jobs:
           sitemap-format: xml
           output-path: sitemap.xml
       - name: Commit and push
-        uses: actions/checkout@v5
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add sitemap.xml
-          git commit -m "Generate sitemap.xml"
-          git push
+        uses: stefanzweifel/git-auto-commit-action@v6
+        with:
+          commit_message: Update sitemap.xml
+          file_pattern: sitemap.xml
