--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -14,12 +14,15 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v5
       - name: Generate Sitemap
-        uses: cicirello/generate-sitemap@v1
-        with:
-          base-url-path: https://rust-wiiu.github.io/
-          sitemap-format: xml
-          output-path: sitemap.xml
+        run: |
+          npx sitemap-generator-cli https://rust-wiiu.github.io/ --output sitemap.xml  --strip-query-string
+          if [ ! -s sitemap.xml ]; then
+            echo "Error: sitemap.xml was not generated or is empty."
+            exit 1
+          fi
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v6
         with:
