--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
     
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
       
     - name: Setup Bun
       uses: oven-sh/setup-bun@v1
@@ -37,6 +37,9 @@ jobs:
       
     - name: Build project
       run: bun run build
+
+    - name: Copy sitemap
+      run: cp ./sitemap.xml ./dist/sitemap.xml 
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
